--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ img {
  
 }
 .mobl-menu-closs {
-  display: block;
+  display: flex;
   margin-left: auto;
   width: 24px;
   height: 24px;
@@ -182,6 +182,7 @@ img {
 
 
 .mobile-address-header {
+  font-style: normal;
 }
 .mobile-contact {
 }
@@ -598,10 +599,8 @@ gap:56px
   letter-spacing: 0.04em;
 }
 .subscribe-btn {
-  
-  display: block;
+  display: flex;
   margin: 0 auto;
-
   min-width: 165px;
   height: 40px;
   justify-content: space-between;
@@ -742,7 +741,6 @@ gap:56px
 .modal {
   width: 392px;
   min-height: 586px;
-  
   background-color: #fcfcfc;
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -760,12 +758,12 @@ gap:56px
 }
 
 .closs-modal-btn {
+  display: flex;
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  display: block;
   margin-left: auto;
   align-items: center;
   justify-content: center;
